fixing the logo vertical align and decoration

--- a/projects/module03/main.css
+++ b/projects/module03/main.css
@@ -39,12 +39,23 @@ body {
 /* Combinator, direct child */
 .main-header > div {
   display: inline-block;
+  vertical-align: middle;
+}
+
+.main-header__brand {
+  color: #0e4f1f;
+  font-weight: bold;
+  font-size: 22px
+}
+.main-header__brand a {
+  text-decoration: none;
 }
 
 .main-nav {
   display: inline-block;
   text-align: right;
-  width: calc(100% - 55px);
+  width: calc(100% - 75px);
+  vertical-align: middle;
 }
 
 .main-nav__item {
